🎨 Improve (un-)read/(un-)star items routes
