# static/openapi.yml
@@ -290,55 +290,59 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         default:
           $ref: '#/components/responses/Error'
-  /item/{id}/read:
+  /items/read:
     post:
-      operationId: read_item
-      summary: Set an item as read
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema: 
-            $ref: '#/components/schemas/ItemID'
+      operationId: read_items
+      summary: Set items as read
+      requestBody:
+        required: true
+        description: List of items IDs to read
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ItemIdList'
       responses:
         '202':
           $ref: '#/components/responses/Accepted'
-  /item/{id}/unread:
+  /items/unread:
     post:
-      operationId: unread_item
-      summary: Set an item as unread
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            $ref: '#/components/schemas/ItemID'
+      operationId: unread_items
+      summary: Set items as unread
+      requestBody:
+        required: true
+        description: List of items IDs to unread
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ItemIdList'
       responses:
         '202':
           $ref: '#/components/responses/Accepted'
-  /item/{id}/star:
+  /items/star:
     post:
-      operationId: star_item
-      summary: Set an item as starred
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            $ref: '#/components/schemas/ItemID'
+      operationId: star_items
+      summary: Set items as starred
+      requestBody:
+        required: true
+        description: List of items IDs to star
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ItemIdList'
       responses:
         '202':
           $ref: '#/components/responses/Accepted'
-  /item/{id}/unstar:
+  /items/unstar:
     post:
-      operationId: unstar_item
-      summary: Set an item as un-starred
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            $ref: '#/components/schemas/ItemID'
+      operationId: unstar_items
+      summary: Set items as un-starred
+      requestBody:
+        required: true
+        description: List of items IDs to un-star
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ItemIdList'
       responses:
         '202':
           $ref: '#/components/responses/Accepted'
@@ -352,6 +356,11 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
+    ItemIdList:
+      type: array
+      description: A list of Item ID.
+      items:
+        $ref: '#/components/schemas/ItemID'
     PagedChannels:
       type: object
       allOf:
